k8s/applications/web/immich/ml-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  selector:
    app: immich-machine-learning
  ports:
    - name: http
      port: 3003
      targetPort: http
