k8s/applications/web/immich/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
spec:
  selector:
    app: immich-server
  ports:
    - name: http
      port: 2283
      targetPort: http
