k8s/applications/web/immich/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - photos.k8s.eudald.gr
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
